--- a/client/map/map.html
+++ b/client/map/map.html
@@ -1,8 +1,20 @@
 <template name="map">
 
+<div class="row">
 	
-<div class="map-container">
-    {{> googleMap name="sitemap" options=MapOptions}}
- </div>
+
+	<div class="col-xs-12">
+	
+	
+		<div class="map-container">
+    		{{> googleMap name="main_map" options=main_map_options}}
+ 		</div>
+
+
+
+	</div>
+
+
+</div>
 
 </template>
